[FLINK-35364] Create core module and move code